--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,20 @@
   box-sizing: border-box;
 }
 
+body {
+  background-image: url(/assets/images/sativa.png);
+}
+
+.navi {
+  width: 100%;
+}
+.navi a {
+  color: white;
+}
+.navi a:hover {
+  color: white;
+}
+
 .pages-1 {
   display: flex;
   justify-content: center;
@@ -41,7 +55,6 @@
   left: 300px;
   width: 60%;
   height: 1000px;
-  background-image: url(https://www.free-css.com/assets/files/free-css-templates/preview/page201/peterna/assets/img/sativa.png);
 }
 
 .text {
@@ -81,7 +94,7 @@
 
 .text-down {
   position: relative;
-  top: 400px;
+  top: 500px;
   left: 40px;
   width: 80%;
 }
@@ -89,13 +102,11 @@
 .pages-3 {
   width: 100%;
   position: relative;
-  top: 100px;
+  top: 200px;
 }
 
 .line-panel {
   background-color: rgb(3, 98, 138);
-  display: flex;
-  align-items: center;
 }
 
 .street-about {
@@ -105,7 +116,7 @@
 .pages-4 {
   width: 100%;
   position: relative;
-  top: 100px;
+  top: 200px;
 }
 
 .our-plan {
